# jni-rs

./: Cargo.toml
src/wrapper/: jnienv.rs
src/wrapper/descriptors/: class_desc.rs
src/wrapper/java_vm/: vm.rs
src/wrapper/objects/: auto_local.rs  jmap.rs  jobject.rs
