[package]
authors = ["Josh Chase <josh@prevoty.com>"]
description = "Rust bindings to the JNI"
documentation = "https://docs.rs/jni"
readme = "README.md"
keywords = [
    "ffi",
    "jni",
    "java",
]
categories = ["api-bindings"]
license = "MIT/Apache-2.0"
name = "jni"
repository = "https://github.com/jni-rs/jni-rs"
# ¡When bumping version please also update it in examples and documentation!
version = "0.19.0"
edition = "2018"

[dependencies]
cesu8 = "1.1.0"
combine = "4.1.0"
jni-sys = "0.4.0"
log = "0.4.4"
thiserror = "1.0.20"
cfg-if = "1.0.0"
once_cell = "1.13.0"

# This dependency will only be included when targeting Android
[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1.1"
lazy_static = "1.4.0"

[build-dependencies]
walkdir = "2"

[dev-dependencies]
lazy_static = "1"


[features]
invocation = []
default = []

[package.metadata.docs.rs]
features = ["invocation"]
